# Backend_PoultryPro

./: .gitignore  main.py  pyproject.toml  requirements.txt
account/: models.py
config/: local_settings.py  settings.py  urls.py
