[project]
name = "poultry-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.12",
    "django-constance>=4.3.4",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-api-key>=3.1.0",
    "djangorestframework-simplejwt>=5.5.1",
]
